--- a/client/src/styles/base.css
+++ b/client/src/styles/base.css
@@ -28,15 +28,23 @@ a {
   font-size: 15px;
 }
 
+button {
+  outline: none;
+}
+
 .homepage {
-  width: 1200px;
+  width: 100vw;
   margin: auto;
   display: flex;
+  font-size: 30px;
 }
 
 .homeheader {
   text-align: center;
-  margin-top: 200px;
+  margin-top: 150px;
+  font-size: 90px;
+  font-weight: bold;
+  font-family: fantasy;
 }
 
 .box {
@@ -47,16 +55,17 @@ a {
 }
 
 .box3 {
-  margin-top: 17px;
+  margin-top: 35px;
 }
 
-.register, .login, .shelterPage, .reservation {
-  width: 1200px;
+.register, .login, .shelterPage, .reservation, .submitPage {
+  width: 1600px;
   margin: auto;
   /* border: 1px solid black; */
 }
 
 .shelterPage {
+  width: 1600px;
   display: flex;
   flex-direction: column;
 }
@@ -64,26 +73,35 @@ a {
 .GoogleMap {
   display: flex;
   justify-content: center;
+  margin-bottom: 20px;
 }
 
 .wrapper {
   display: flex;
   margin-top: 20px;
-  margin:auto;
+  /* margin: auto; */
+  justify-content: space-evenly;
 }
 
-.registerHeader, .loginHeader{
-  width: 1200px;
+ .submitHeader{
+  width: 1600px;
   margin: auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border-bottom: 1px solid black;
 }
 
-.shelterHeader {
-  width: 1200px;
+.shelterHeader, .registerHeader, .loginHeader, .reservationHeader{
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid black;
+  margin-bottom: 40px;
+}
+
+.submitHeader {
+  justify-content: space-between;
 }
 
 .registerForm {
@@ -92,11 +110,18 @@ a {
   align-items: center;
   width: 1200px;
   margin: auto;
+  margin-top: 70px;
   border: 1px solid black;
   padding: 10px;
+  padding-bottom: 20px;
+  font-size: 18px;
 }
 
-.loginForm, .reservationForm {
+.registerForm:hover, .loginForm:hover, .reservationForm:hover, .submission:hover {
+  border: 3px solid green;
+}
+
+.submission {
   border: 1px solid black;
   display: flex;
   flex-direction: column;
@@ -104,7 +129,42 @@ a {
   width: 600px;
   padding: 10px;
   margin: auto;
-  margin-top: 30px;
+  margin-top: 70px;
+}
+
+.reservationForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 600px;
+  padding: 10px;
+  margin: auto;
+  margin-top: 70px;
+  border: 1px solid black;
+}
+
+.loginForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 600px;
+  height: 300px;
+  padding: 10px;
+  padding-top: 45px;
+  margin: auto;
+  margin-top: 70px;
+  border: 1px solid black;
+  font-size: 18px;
+}
+
+.profileSection {
+  width: 1200px;
+  margin: auto;
+  padding: 10px;
+}
+
+.welcome {
+  text-align: center;
 }
 
 
@@ -114,6 +174,11 @@ input {
   height: 25px;
   background-color: white;
   font-size: 14px;
+  outline: none;
+}
+
+input:hover {
+  border: 2px solid green;
 }
 
 .inputBed {
@@ -148,21 +213,44 @@ input {
 
 .acct, .acct1 {
   font-size: 25px;
+  font-weight: bold;
 }
 
-.acct1 {
+.shelterTitle, .registerTitle, .loginTitle, .reservationTitle, .submissionTitle {
   text-align: center;
-  padding-left: 310px;
+  font-size: 40px;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.reservationTitle {
+  margin-right: 180px;
+}
+
+.RLbuttons, .RLbuttons > a {
+  background-color: green;
+  color: white;
+  height: 30px;
+  width: 80px;
+  font-size: 16px;
 }
 
 .HomeButton > a{
   font-size: 50px;
 }
 
-.choices {
-  width: 70px;
+.HomeButton>a:hover {
+  color: green;
+}
+
+.choices, .GenderChoice {
+  width: 75px;
   height: 25px;
   background-color: white;
+  font-size: 14px;
+}
+
+.GenderChoice {
+  margin-left: 5px;
 }
 
 .RegisterButton2 {
@@ -205,6 +293,7 @@ input {
   background-color: green;
   color: white;
   outline: none;
+  font-weight: bold;
 }
 
 .mainbuttons {
@@ -224,11 +313,25 @@ input {
 
 .shelterList {
   border: 1px dashed black;
-  width: 500px;
+  width: 600px;
   padding: 10px;
-  margin: auto;
+  padding-left: 20px;
+  padding-bottom: 20px;
   margin-top: 20px;
   margin-bottom: 10px;
+  /* margin-right: 150px; */
+}
+
+.shelterList:hover {
+  border: 3px solid green;
+}
+
+
+.shelterName {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 30px;
+  text-align: center;
+  font-weight: bold;
 }
 
 .last {
@@ -237,9 +340,39 @@ input {
 }
 
 .otherShelterList {
-  margin: auto;
-  padding-left: 40px;
+  /* padding-left: 70px; */
   padding-top: 5px;
-  width: 500px;
-  
+  text-align: justify;
+  width: 600px;
+}
+
+.openTitle {
+  margin: auto;
+  margin-bottom: 10px;
+  padding-left: 40px;
+  padding-top: 15px;
+  padding-bottom: 10px;
+  /* font-weight: bold; */
+  border-bottom: 1px solid black;
+  font-size: 30px;
+  text-align: center;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.hoursOpen {
+  padding: 5px;
+  padding-bottom: 30px;
+}
+
+.hoursOpen > label {
+  padding-left: 10px;
+}
+
+.thanks {
+  text-align: center;
+  margin-bottom: 0px;
+}
+
+.shelterResName {
+  text-align: center;
 }
